Updated the fullscreen creator paragraphy-style copy (small font size) to be a fixed width. Made it much more readable.

--- a/public/stylesheets/creator_text_styles.css
+++ b/public/stylesheets/creator_text_styles.css
@@ -37,6 +37,7 @@
 	text-align: justify;
 	font-weight: 700;
 }
+#pages .blocky-paragraph { width: 700px !important; }
 .blocky-paragraph.drop-capped *:first-letter{
 	font-size: 107px;
 	float: left;
@@ -90,6 +91,7 @@
 	word-spacing: 0px;
 	text-transform: none;
 }
+#pages .deco-paragraph { width: 700px !important; }
 .deco-paragraph.drop-capped *:first-letter {
 	font-family: "museo-slab-1", "museo-slab-2", serif;
 	font-size: 120px;
@@ -142,6 +144,7 @@
 	text-transform: none;
 	text-align: justify;
 }
+#pages .typewriter-paragraph { width: 700px !important; }
 .typewriter-paragraph.drop-capped *:first-letter {
 	font-size: 110px;
 	font-family: "museo-sans-1", "museo-sans-2", sans-serif;
