--- a/public/stylesheets/sass/presenter.sass
+++ b/public/stylesheets/sass/presenter.sass
@@ -5,7 +5,6 @@ body#stories.show
 	top: 0
 	left: 0
 	width: 100%
-	background: #000
 	min-height: 742px
 	height: 100%
 
