--- a/public/stylesheets/sass/stories.sass
+++ b/public/stylesheets/sass/stories.sass
@@ -133,7 +133,6 @@
 	.pullquote-inner
 		display: table
 		height: 100%
-		width: 700px
 		margin: 0 auto
 		div.quote
 			display: table-cell
