--- a/public/stylesheets/sass/stories/form.sass
+++ b/public/stylesheets/sass/stories/form.sass
@@ -898,7 +898,7 @@ form.new_story, form.edit_story, .story-form
 						height: 121px
 						width: 100%
 						ul.styles
-							width: 2184px
+							width: 1560px
 							padding: 0 2px
 							li
 								width: 150px
