--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3032,7 +3032,6 @@ form.new_story, form.edit_story, .story-form {
   #page-previews li.pullquote .pullquote-inner {
     display: table;
     height: 100%;
-    width: 700px;
     margin: 0 auto; }
     #page-previews li.pullquote .pullquote-inner div.quote {
       display: table-cell;
@@ -3413,7 +3412,7 @@ form.new_story, form.edit_story, .story-form {
             height: 121px;
             width: 100%; }
             #page-editor #pane .pane-insides .body li.text-style-chooser .styles-wrapper ul.styles {
-              width: 2184px;
+              width: 1560px;
               padding: 0 2px; }
               #page-editor #pane .pane-insides .body li.text-style-chooser .styles-wrapper ul.styles li {
                 width: 150px;
@@ -3840,7 +3839,6 @@ form.new_story, form.edit_story, .story-form {
       #page-editor ul#pages .pullquote .pullquote-inner {
         display: table;
         height: 100%;
-        width: 700px;
         margin: 0 auto; }
         #page-editor ul#pages .pullquote .pullquote-inner div.quote {
           display: table-cell;
@@ -4146,7 +4144,6 @@ form.new_story, form.edit_story, .story-form {
         .story-gallery .large-preview .pages a.pullquote .pullquote-inner {
           display: table;
           height: 100%;
-          width: 700px;
           margin: 0 auto; }
           .story-gallery .large-preview .pages a.pullquote .pullquote-inner div.quote {
             display: table-cell;
@@ -4396,7 +4393,6 @@ form.new_story, form.edit_story, .story-form {
         .story-gallery .slider .viewport .preview.pullquote .pullquote-inner {
           display: table;
           height: 100%;
-          width: 700px;
           margin: 0 auto; }
           .story-gallery .slider .viewport .preview.pullquote .pullquote-inner div.quote {
             display: table-cell;
@@ -4582,7 +4578,6 @@ body#stories.show {
   top: 0;
   left: 0;
   width: 100%;
-  background: black;
   min-height: 742px;
   height: 100%; }
 
@@ -5078,7 +5073,6 @@ body#stories.show {
       #presenter ul#pages li.pullquote .pullquote-inner {
         display: table;
         height: 100%;
-        width: 700px;
         margin: 0 auto; }
         #presenter ul#pages li.pullquote .pullquote-inner div.quote {
           display: table-cell;
@@ -5465,7 +5459,6 @@ body#stories.show {
   .thumbnail.pullquote .pullquote-inner {
     display: table;
     height: 100%;
-    width: 700px;
     margin: 0 auto; }
     .thumbnail.pullquote .pullquote-inner div.quote {
       display: table-cell;
@@ -5563,7 +5556,6 @@ body#stories.show {
   .thumbnail.pullquote.medium .pullquote-inner {
     display: table;
     height: 100%;
-    width: 700px;
     margin: 0 auto; }
     .thumbnail.pullquote.medium .pullquote-inner div.quote {
       display: table-cell;
@@ -5706,7 +5698,6 @@ body#stories.show {
   .thumbnail.pullquote.petite .pullquote-inner {
     display: table;
     height: 100%;
-    width: 700px;
     margin: 0 auto; }
     .thumbnail.pullquote.petite .pullquote-inner div.quote {
       display: table-cell;
